Removed calendar's unneeded scroll, corrected its spacing

--- a/public_html/layouts/basic/styles/pages/_Calendar.scss
+++ b/public_html/layouts/basic/styles/pages/_Calendar.scss
@@ -19,7 +19,7 @@
 }
 
 @media(min-width: 992px) {
-	.Calendar_Calendar .mainBody {
+	[class$="_Calendar"] .mainBody {
 		overflow: hidden;
 	}
 }
